# emergency-communications-hub

./: .gitignore  DEPENDENCIES.md  ECH_REQUIREMENTS_AND_PROGRESS.md  ECH_requirements_v3.md  README.md  SECURITY_ISSUES.md  VERSION  config-sim.yaml  config.yaml  docker-compose.monitoring.yml  pyproject.toml
deploy/: build_and_scp.ps1  deploy_paramiko.py  ech-sim.service  fetch_logs.py  install.sh  local.env.example  remote_diag.py
ech/: __init__.py  main.py
ech/adapters/: adsb_adapter.py  ais_catcher_adapter.py  aprs_is.py  aprs_kiss.py  aredn_ami.py  asterisk_adapter.py  at_engine.py  base.py  js8call.py  meshcore.py  meshtastic_adapter.py  mock_aprs.py  mock_asterisk.py  mock_js8call.py  mock_meshcore.py  mock_meshtastic.py  mock_pat_winlink.py  mock_sms.py  mqtt_adapter.py  pat_winlink.py  reticulum_adapter.py  sms.py
ech/api/: app.py
ech/core/: anomaly.py  auth.py  cat_rigctld.py  database.py  gps.py  hamlog.py  mesh_bot.py  meshcore_bridge.py  metrics.py  models.py  router.py  state.py  tls.py  weather.py  weather_bot.py
ech/ui/templates/: anomalies.html  change_password.html  hamlog.html  index.html  login.html  logs.html  map.html  settings.html  simulation.html
monitoring/loki/: loki.yml
monitoring/prometheus/: prometheus.yml
monitoring/promtail/: promtail.yml
scripts/: forward_winlink_mail.sh  install.sh  install_asterisk.sh
systemd/: pat.service
tests/: test_meshcore_bridge.py  test_meshtastic_js8call.py  test_pat_winlink.py  test_real_adapters.py  test_router.py  test_sms.py  test_v06_additions.py  test_v08_additions.py
(+3 files in other folders)
